--- a/src/Kaleido.Modules.Services.Grpc.CurrencyRates.Migrations/Kaleido.Modules.Services.Grpc.CurrencyRates.Migrations.csproj
+++ b/src/Kaleido.Modules.Services.Grpc.CurrencyRates.Migrations/Kaleido.Modules.Services.Grpc.CurrencyRates.Migrations.csproj
@@ -7,4 +7,22 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <Company>Kaleido Organisation Manager</Company>
+    <PackageDescription>Kaleido.Modules.Services.Grpc.CurrencyRates.Migrations</PackageDescription>
+    <RepositoryUrl>https://github.com/Kaleido-organisation-manager/kaleido-modules-services-grpc-currency-rates</RepositoryUrl>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Kaleido.Modules.Services.Grpc.CurrencyRates\Kaleido.Modules.Services.Grpc.CurrencyRates.csproj" />
+  </ItemGroup>
+
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.8">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
