--- a/src/Kaleido.Modules.Services.Grpc.CurrencyRates.Tests.Integrations/Kaleido.Modules.Services.Grpc.CurrencyRates.Tests.Integrations.csproj
+++ b/src/Kaleido.Modules.Services.Grpc.CurrencyRates.Tests.Integrations/Kaleido.Modules.Services.Grpc.CurrencyRates.Tests.Integrations.csproj
@@ -12,12 +12,25 @@
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
+    <PackageReference Include="TestContainers" Version="3.10.0" />
+    <PackageReference Include="TestContainers.PostgreSql" Version="3.10.0" />
     <PackageReference Include="xunit" Version="2.5.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3" />
   </ItemGroup>
 
   <ItemGroup>
     <Using Include="Xunit" />
+  </ItemGroup>
+
+  
+  <ItemGroup>
+    <ProjectReference Include="..\Kaleido.Modules.Services.Grpc.CurrencyRates.Client\Kaleido.Modules.Services.Grpc.CurrencyRates.Client.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="appsettings.Development.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
